Build to test on Node 12

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,10 +88,10 @@ jobs:
       - store_test_results:
           path: reports/junit
 
-  test-node-11:
+  test-node-12:
     working_directory: ~/jest
     docker:
-      - image: circleci/node:11
+      - image: circleci/node:12
     steps:
       - checkout
       - restore-cache: *restore-cache
@@ -137,7 +137,7 @@ workflows:
       - test-node-8
       - test-node-10
       - test-jest-circus
-      - test-node-11 # current
+      - test-node-12
       - test-browser
       - test-or-deploy-website:
           filters: *filter-ignore-gh-pages
