--- a/packages/jest-leak-detector/package.json
+++ b/packages/jest-leak-detector/package.json
@@ -11,10 +11,11 @@
   "types": "build/index.d.ts",
   "dependencies": {
     "jest-get-type": "^24.8.0",
-    "pretty-format": "^24.8.0"
+    "pretty-format": "^24.8.0",
+    "weak-napi": "^1.0.3"
   },
   "devDependencies": {
-    "weak-napi": "^1.0.3"
+    "@types/weak-napi": "^1.0.0"
   },
   "engines": {
     "node": ">= 6"
